  utility. The command "Set NativeCompute Profiling" enables
  profiling, and "Set NativeCompute Profile Filename" customizes
  the profile filename.
- The tactic "omega" is now aware of the bodies of context variables
  such as "x := 5 : Z" (see BZ#148). This could be disabled via
  Unset Omega UseLocalDefs.
- The tactic "romega" is also aware now of the bodies of context variables.

Changes from 8.7+beta2 to 8.7.0
===============================

OCaml

- Users can pass specific flags to the OCaml optimizing compiler by
  -using the flambda-opts configure-time option.

  Beware that compiling Coq with a flambda-enabled compiler is
  experimental and may require large amounts of RAM and CPU, see
  INSTALL for more details.

Changes from 8.7+beta1 to 8.7+beta2
===================================

Tools

- In CoqIDE, the "Compile Buffer" command takes account of flags in
  _CoqProject or other project file.

Improvements around some error messages.

Many bug fixes including two important ones:

- BZ#5730: CoqIDE becomes unresponsive on file open.
- coq_makefile: make sure compile flags for Coq and coq_makefile are in sync
  (in particular, make sure the `-safe-string` option is used to compile plugins).

Changes from 8.6.1 to 8.7+beta1
===============================

Tactics

- New tactic "extensionality in H" which applies (possibly dependent)
  functional extensionality in H supposed to be a quantified equality
  until giving a bare equality.
- New tactic "inversion_sigma" which turns equalities of dependent
  pairs (e.g., "existT P x p = existT P y q", frequently left over by
  "inversion" on a dependent type family) into pairs of equalities
  (e.g., a hypothesis "H : x = y" and a hypothesis of type "rew H in p
  = q"); these hypotheses can subsequently be simplified using
  "subst", without ever invoking any kind of axiom asserting
  uniqueness of identity proofs. If you want to explicitly specify the